style: change reply form email style

--- a/src/containers/Main/components/ReplyForm/style.css
+++ b/src/containers/Main/components/ReplyForm/style.css
@@ -2,9 +2,10 @@
   margin-top: 10px;
 }
 
-.form .header {
-  display: flex;
-  margin-left: 10%;
+.form .email {
+  float: left;
+  width: 80%;
+  margin-right: 10px;
 }
 
 .form :global(.ant-form-item) {
