feat: header image from gravatar

--- a/src/containers/Main/components/MessageList/style.css
+++ b/src/containers/Main/components/MessageList/style.css
@@ -16,6 +16,10 @@
   display: flex;
 }
 
+.list .element .title .header {
+  margin-right: 5px;
+}
+
 .list .element .title .email {
   text-decoration: underline;
 }
