--- a/src/containers/Main/components/MessageList/style.css
+++ b/src/containers/Main/components/MessageList/style.css
@@ -4,6 +4,14 @@
   margin-left: 10%;
 }
 
+.list .count {
+  align-content: flex-end;
+  display: flex;
+  font-size: xx-large;
+  border-bottom: 1px solid #D3D3D3;
+  margin-bottom: 10px;
+}
+
 .list .element {
   display: flex;
   flex-direction: column;
